// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chart snapshots AdoptionChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="4"
    data-testid="line-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="pilots"
      data-name="Pilots"
      data-stroke="#3b82f6"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots AdoptionChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="0"
    data-testid="line-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="pilots"
      data-name="Pilots"
      data-stroke="#3b82f6"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots CategoryTimeline matches snapshot with empty data 1`] = `
<p
  class="text-center text-gray-400 py-6"
>
  No equipment data
</p>
`;

exports[`Chart snapshots CategoryTimeline matches snapshot with multi-glider data 1`] = `
<div
  class="overflow-x-auto"
  data-testid="category-timeline"
>
  <div
    class="min-w-[360px] space-y-1"
  >
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-sm"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0 flex items-center gap-1 sm:gap-1.5 min-w-0"
      >
        <span
          class="px-1 sm:px-1.5 py-0.5 rounded text-[10px] font-medium flex-shrink-0 bg-green-100 text-green-800"
        >
          A
        </span>
        <span
          class="text-gray-700 truncate text-xs sm:text-sm"
        >
          ADVANCE Alpha 7
        </span>
      </div>
      <div
        class="flex-1 relative h-5 sm:h-6"
      >
        <div
          class="absolute top-0 h-full rounded bg-green-400 flex items-center justify-center"
          style="left: 0%; width: 20.551601423487543%; min-width: 8px;"
          title="ADVANCE Alpha 7 (A) — 2018–2019 — 12 flights"
        >
          <span
            class="text-[9px] text-white font-medium drop-shadow-sm px-0.5 whitespace-nowrap overflow-hidden"
          >
            12
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-sm"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0 flex items-center gap-1 sm:gap-1.5 min-w-0"
      >
        <span
          class="px-1 sm:px-1.5 py-0.5 rounded text-[10px] font-medium flex-shrink-0 bg-yellow-100 text-yellow-800"
        >
          C
        </span>
        <span
          class="text-gray-700 truncate text-xs sm:text-sm"
        >
          NOVA Mentor 6
        </span>
      </div>
      <div
        class="flex-1 relative h-5 sm:h-6"
      >
        <div
          class="absolute top-0 h-full rounded bg-yellow-400 flex items-center justify-center"
          style="left: 21.040925266903916%; width: 52.80249110320284%; min-width: 8px;"
          title="NOVA Mentor 6 (C) — 2019–2022 — 45 flights"
        >
          <span
            class="text-[9px] text-white font-medium drop-shadow-sm px-0.5 whitespace-nowrap overflow-hidden"
          >
            45
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-sm"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0 flex items-center gap-1 sm:gap-1.5 min-w-0"
      >
        <span
          class="px-1 sm:px-1.5 py-0.5 rounded text-[10px] font-medium flex-shrink-0 bg-red-100 text-red-800"
        >
          D
        </span>
        <span
          class="text-gray-700 truncate text-xs sm:text-sm"
        >
          OZONE Enzo 3
        </span>
      </div>
      <div
        class="flex-1 relative h-5 sm:h-6"
      >
        <div
          class="absolute top-0 h-full rounded bg-red-400 flex items-center justify-center"
          style="left: 73.88790035587188%; width: 26.11209964412811%; min-width: 8px;"
          title="OZONE Enzo 3 (D) — 2022–2024 — 80 flights"
        >
          <span
            class="text-[9px] text-white font-medium drop-shadow-sm px-0.5 whitespace-nowrap overflow-hidden"
          >
            80
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-xs text-gray-400"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0"
      />
      <div
        class="flex-1 relative h-4"
      >
        <span
          class="absolute text-[10px]"
          style="left: 0%;"
        >
          2018
        </span>
        <span
          class="absolute text-[10px]"
          style="left: 29.225978647686834%;"
        >
          2020
        </span>
        <span
          class="absolute text-[10px]"
          style="left: 61.74377224199288%;"
        >
          2022
        </span>
        <span
          class="absolute text-[10px]"
          style="left: 94.21708185053382%;"
        >
          2024
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chart snapshots CategoryTimeline matches snapshot with single-day usage 1`] = `
<div
  class="overflow-x-auto"
  data-testid="category-timeline"
>
  <div
    class="min-w-[360px] space-y-1"
  >
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-sm"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0 flex items-center gap-1 sm:gap-1.5 min-w-0"
      >
        <span
          class="px-1 sm:px-1.5 py-0.5 rounded text-[10px] font-medium flex-shrink-0 bg-blue-100 text-blue-800"
        >
          B
        </span>
        <span
          class="text-gray-700 truncate text-xs sm:text-sm"
        >
          OZONE Rush 5
        </span>
      </div>
      <div
        class="flex-1 relative h-5 sm:h-6"
      >
        <div
          class="absolute top-0 h-full rounded bg-blue-400 flex items-center justify-center"
          style="left: 0%; width: 0%; min-width: 8px;"
          title="OZONE Rush 5 (B) — 2023–2023 — 1 flights"
        >
          <span
            class="text-[9px] text-white font-medium drop-shadow-sm px-0.5 whitespace-nowrap overflow-hidden"
          >
            1
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-1.5 sm:gap-2 text-xs text-gray-400"
    >
      <div
        class="w-24 sm:w-40 flex-shrink-0"
      />
      <div
        class="flex-1 relative h-4"
      >
        <span
          class="absolute text-[10px]"
          style="left: 0%;"
        >
          2023
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chart snapshots DistanceHistogram matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="6"
    data-testid="bar-chart"
  >
    <div
      data-datakey="bucket"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="count"
      data-testid="bar"
    >
      <div
        data-fill="#d1d5db"
        data-testid="cell"
      />
      <div
        data-fill="#93c5fd"
        data-testid="cell"
      />
      <div
        data-fill="#60a5fa"
        data-testid="cell"
      />
      <div
        data-fill="#3b82f6"
        data-testid="cell"
      />
      <div
        data-fill="#2563eb"
        data-testid="cell"
      />
      <div
        data-fill="#1d4ed8"
        data-testid="cell"
      />
    </div>
  </div>
</div>
`;

exports[`Chart snapshots DowChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="7"
    data-testid="bar-chart"
  >
    <div
      data-datakey="day"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#06b6d4"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots HourlyChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="15"
    data-testid="bar-chart"
  >
    <div
      data-datakey="hour"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#8b5cf6"
      data-testid="bar"
    />
  </div>
</div>
`;

exports[`Chart snapshots MonthlyBarChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="composed-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots MonthlyBarChart matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="12"
    data-testid="composed-chart"
  >
    <div
      data-datakey="name"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots PilotDnaChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="5"
    data-testid="radar-chart"
  >
    <div
      data-testid="polar-grid"
    />
    <div
      data-datakey="axis"
      data-testid="polar-angle-axis"
    />
    <div
      data-testid="polar-radius-axis"
    />
    <div
      data-datakey="value"
      data-fill="#3b82f6"
      data-fillopacity="0.25"
      data-testid="radar"
    />
    <div
      data-testid="tooltip"
    />
  </div>
</div>
`;

exports[`Chart snapshots PilotYearlyChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="2"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="avgDist"
      data-name="Avg km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
    <div
      data-datakey="maxDist"
      data-name="Max km"
      data-stroke="#ef4444"
      data-testid="line"
    />
    <div
      data-datakey="hours"
      data-name="Hours"
      data-stroke="#10b981"
      data-testid="line"
    />
  </div>
</div>
`;

exports[`Chart snapshots RecordProgressionChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="4"
    data-testid="area-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="record"
      data-fill="#dbeafe"
      data-stroke="#2563eb"
      data-testid="area"
      data-type="stepAfter"
    />
  </div>
</div>
`;

exports[`Chart snapshots RecordProgressionChart matches snapshot with empty data 1`] = `null`;

exports[`Chart snapshots WingDonut matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-testid="pie-chart"
  >
    <div
      data-datakey="value"
      data-length="3"
      data-testid="pie"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
  </div>
</div>
`;

exports[`Chart snapshots WingDonut matches snapshot with empty data 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-testid="pie-chart"
  >
    <div
      data-datakey="value"
      data-length="0"
      data-testid="pie"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-testid="legend"
    />
  </div>
</div>
`;

exports[`Chart snapshots YearlyTrendChart matches snapshot 1`] = `
<div
  data-testid="responsive-container"
>
  <div
    data-length="2"
    data-testid="composed-chart"
  >
    <div
      data-datakey="year"
      data-testid="xaxis"
    />
    <div
      data-testid="yaxis"
      data-yaxisid="left"
    />
    <div
      data-orientation="right"
      data-testid="yaxis"
      data-yaxisid="right"
    />
    <div
      data-testid="tooltip"
    />
    <div
      data-datakey="flights"
      data-fill="#3b82f6"
      data-name="Flights"
      data-testid="bar"
    />
    <div
      data-datakey="totalKm"
      data-name="Total km"
      data-stroke="#f59e0b"
      data-testid="line"
    />
  </div>
</div>
`;
